# live-container-migration

./: README.md  pyproject.toml  setup.sh  wg_migration_test.py
agent/: main.py  requirements.txt
agent-client/: client.py  exporter.py  main.py  requirements.txt  state.py
agent-server/: main.py  requirements.txt  server.py  state.py  util.py
agent/communication/: client.py  server.py
agent/communication/transporter/: __init__.py
agent/grpc/protos/: agent.proto  hello.proto
agent/migrator/: exporter.py
agent/util/: podman.py
common/: net.py
container/example/io/: main.py
container/example/io-openfd/: main.py
container/example/net/: Dockerfile
container/example/net-complex/: TODO.md
container/example/net-in/: main.py
container/example/net-out/: main.py
container/example/simple/: Dockerfile  main.py
credential/: dest_key
